base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: acct-mgt
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: acct-mgt
  type: ClusterIP
